--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
   "license": "MIT",
   "dependencies": {
     "angular": "^1.5.6",
+    "body-parser": "^1.15.1",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^1.2.0",
+    "ejs": "^2.4.2",
     "express": "^4.12.4",
     "express-session": "^1.11.3",
     "mongoose": "^4.1.0",
     "passport": "^0.3.0",
     "passport-github": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "request": "^2.72.0"
   }
 }
